2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (print_stream_request): Tweak JSON
	output, following model in "node.cpp"'s
	`dump_node_list_in_reverse()` (but using `errprint()` instead of
	fputc(3)).  Fixes extra spaces in list notation.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/xtotroff/xtotroff.c (MapFont, main): Tweak wording
	of error diagnostics; favor "cannot" over "unable to" or
	"can't".  Also quote name of environment variable.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/xtotroff/xtotroff.c: Fix code style nit.
	(CanonicalizeFontName, FontNamesAmbiguous, MapFont, main):
	Explicitly cast unused return values of printf(3)-family
	functions to `void`.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/pfbtops/pfbtops.c: Refactor.
	(error): Drop exit(3) call so that we can use this function for
	nonfatal errors or fatal ones that need to exit with a status
	other than `EXIT_FAILURE` (as with usage errors).
	(die): New function wraps `error()` and exit(3)s.
	(get_text, get_binary, main): Migrate callers from `error()` to
	`die()`.
	(error, usage): Explicitly cast unused return value of
	fprintf(3) to `void`.
	(main): Employ new strategies for construction of error
	diagnostics reporting unrecognized options.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	Handle unrecognized long option arguments better.

	* src/devices/grodvi/dvi.cpp (main):
	* src/devices/grohtml/post-html.cpp (main):
	* src/devices/grolbp/lbp.cpp (main):
	* src/devices/grolj4/lj4.cpp (main):
	* src/devices/grops/ps.cpp (main):
	* src/devices/grotty/tty.cpp (main):
	* src/preproc/eqn/main.cpp (main):
	* src/preproc/grn/main.cpp (main):
	* src/preproc/html/pre-html.cpp (main):
	* src/preproc/pic/main.cpp (main):
	* src/preproc/preconv/main.cpp (main):
	* src/preproc/soelim/main.cpp (main):
	* src/preproc/tbl/main.cpp (main):